# cfg3demo

./: .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix  index.html  index.js  run.fish  todo.md
CAD/: chair.FCStd
docs/: cfg3demo-43e14d5b7d657a9a.js  cfg3demo-43e14d5b7d657a9a_bg.wasm  cfg3demo-a3fe00495651ca6f.js  cfg3demo-a3fe00495651ca6f_bg.wasm  chinese_garden_4k.hdr  index.html
src/: gmain.rs  lib.rs  main.rs  render.rs
src/product/: assembly.rs  component.rs  material.rs  mod.rs  part.rs  shape.rs
