[package]
name = "cfg3demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cfg3demo"
crate-type = ["cdylib", "lib"]

[dependencies]
reqwest = "0.11.22"
three-d = { version = "0.16.3", features = ["egui-gui"] }
three-d-asset = { version = "0.6.0", features = ["hdr", "http", "obj"] }
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { features = ["macros", "rt", "sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"
